<resources>
  <string name="app_name">TargetCaseStudy</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <!-- Credit card validation strings. You do not need to make changes here. -->
  <string name="credit_card_payment_title">Credit Card Payment</string>
  <string name="credit_card_payment_subtitle">Note: you do NOT need to enter real data</string>
  <string name="submit">Submit</string>
  <string name="cancel">Cancel</string>
  <string name="credit_card_number_hint">Credit card number</string>

  <string name="supporting">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>
  <string name="title">Title</string>
  <string name="subhead">Subhead</string>
  <string name="primary">Title goes here</string>
  <string name="primary_short">Title here</string>
  <string name="subtext">Subtitle here</string>
  <string name="action_1">TEXT 1</string>
  <string name="action_2">TEXT 2</string>
  <string name="expanded_supporting">I\'m a thing. But, like most politicians, he promised more than he could deliver. You won\'t have time for sleeping, soldier, not with all the bed making you\'ll be doing. Then we\'ll go with that data file! Hey, you add a one and two zeros to that or we walk! You\'re going to do his laundry? I\'ve got to find a way to escape.</string>
    <string name="thank_you">Thank you</string>

</resources>
